Table member {
  id uuid [pk, increment]
  app_id uuid [ref: > app.id]
  name varchar
  external_id varchar
}

Table member_file {
  id int
  member_id uuid [ref: > member.id]
  file_id uuid [ref: > file.id]
  Note: 'Member uploadings'
}

Enum member_role_enum {
  moderator
}

Table member_role {
  id int
  member_id uuid [ref: > member.id]
  role member_role_enum
}
